# desktop/src/open-api/model/models.ts
@@ -44,6 +44,7 @@ export * from './groupRole';
 export * from './groupSettings';
 export * from './groupSettingsWhiteListEmail';
 export * from './groupStatus';
+export * from './groupTaxRule';
 export * from './icon';
 export * from './importType';
 export * from './internalErrorResponse';
